--- a/_sass/layout/_layout.scss
+++ b/_sass/layout/_layout.scss
@@ -41,12 +41,16 @@ main {
 		padding: $spacing-xxxl 0;
 	}
 
-	.bento-grid .bento-section {
-		.bento-image {
-			border-radius: 0;
+	.bento-grid {
+		border-radius: 0;
 
-			@media (min-width: $breakpoint-lg) {
-				border-radius: $border-radius-lg;
+		.bento-section {
+			.bento-image {
+				border-radius: 0;
+
+				@media (min-width: $breakpoint-lg) {
+					border-radius: $border-radius-lg;
+				}
 			}
 		}
 	}
@@ -57,6 +61,7 @@ main {
 
 	> div {
 		flex: 1 1 50%;
+		padding: 0;
 	}
 
 	@container (min-width: #{$container-lg}) {
