mobile header and typography adjustments

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,9 @@
     <div class="logo">
       <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/logo/rize-logo.svg" alt="Rize Digital Logo"></a>
     </div>
+    <div class="logo-mobile">
+      <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/logo/rize-lettermark.svg" alt="Rize Digital Logo"></a>
+    </div>
     <nav>
       <div class="nav-links">
         {% for item in site.data.navigation %}
