fixes some content form layout

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,4 +1,4 @@
-<div class="cta-section">
+<div class="cta-section form-section">
   <div class="cta-body bento-grid">
     <div class="form-container">
       <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
