--- a/_sass/global/_variables.scss
+++ b/_sass/global/_variables.scss
@@ -92,7 +92,7 @@ $transition-fast: 0.2s ease-in-out;
 $transition: 0.3s ease-in-out;
 
 // Border radius
-$border-radius-sm: 0.25%;
+$border-radius-sm: 6px;
 $border-radius: 12px;
 $border-radius-lg: 30px;
 $border-radius-xl: 60px;
