--- a/_sass/global/_forms.scss
+++ b/_sass/global/_forms.scss
@@ -1,4 +1,11 @@
 @use 'variables' as *;
+.cta-section.form-section {
+	padding: 0;
+
+	.cta-body {
+		margin-top: -100px;
+	}
+}
 
 .form-container {
 	padding: $spacing-lg 0;
@@ -10,7 +17,7 @@
 	.contact-form {
 		display: flex;
 		flex-direction: column;
-		gap: $spacing-md;
+		gap: $spacing-sm;
 		max-width: $container-lg;
 		margin: 0 auto;
 		padding: 0;
@@ -19,14 +26,14 @@
 		.form-group {
 			display: flex;
 			flex-direction: column;
-			gap: $spacing-sm;
+			gap: $spacing-xs;
 		}
 
 		// Labels
 		label {
-			font-weight: $font-weight-bold;
+			font-weight: $font-weight-regular;
 			color: var(--text-primary);
-			font-size: $font-size-body;
+			font-size: $font-size-sm;
 			text-align: left;
 		}
 
@@ -36,18 +43,17 @@
 		input[type='tel'],
 		select,
 		textarea {
-			padding: $spacing-sm $spacing-md;
+			// padding: $spacing-sm $spacing-md;
 			border: 1px solid $color-white;
-			border-radius: 0.5rem;
-			font-size: 1rem;
-			transition: all 0.2s ease;
+			border-radius: $border-radius-sm;
+			font-size: $font-size-sm;
+			transition: all $transition-fast;
 			background-color: $color-white;
 			color: $color-black;
 
 			&:focus {
 				outline: none;
-				border-color: var(--primary-color, #3b82f6);
-				// box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+				border-color: $color-secondary;
 				box-shadow: $drop-shadow-sm;
 			}
 
@@ -64,7 +70,8 @@
 			background-position: right 1rem center;
 			background-size: 1.5em;
 			color: $color-black;
-			padding-right: $spacing-xl;
+			padding-left: $spacing-sm;
+			padding-right: $spacing-lg;
 		}
 
 		// Checkbox container
@@ -77,8 +84,8 @@
 			input[type='checkbox'] {
 				width: 1.25rem;
 				height: 1.25rem;
-				border-radius: 0.25rem;
-				border: 1px solid var(--border-color, $color-white);
+				border-radius: $border-radius-sm;
+				border: 1px solid $color-white;
 				cursor: pointer;
 			}
 		}
