header and footer things

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,13 @@
 <footer>
   <div class="footer-container">
+    <img src="/assets/images/logo/rize-logo-wo.svg" alt="Rize Digital logo" class="logo" />
     <div>
       <div class="social-media">
         {% include social-links.html class="footer-social" %}
       </div>
     </div>
     <div class="subfooter">
-      <span class="text-center">
+      <span class="">
         &copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.
       </span>
       <p class="text-center">
