--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     <nav>
       <div class="nav-links">
         {% for item in site.data.navigation %}
-        <a href="{{ item.link }}" {% if page.url==item.link %}style="color: red;" {% endif %}>
+        <a href="{{ item.link }}" {% if page.url==item.link %}class="active" {% endif %}>
           {{ item.name }}
         </a>
         {% endfor %}
