--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -30,6 +30,7 @@ a.button,
 		border-color: $color-white;
 		color: $color-black;
 		text-decoration: none;
+		transform: scale(1.1);
 	}
 
 	&.button-alt {
