--- a/_sass/layout/_bento.scss
+++ b/_sass/layout/_bento.scss
@@ -102,7 +102,7 @@ ul.bento-grid {
 		}
 
 		.bento-section.text-container {
-			padding: $spacing-md $spacing-md;
+			padding: 0 $spacing-md $spacing-md;
 			gap: $spacing-sm;
 
 			@media (min-width: $breakpoint-lg) {
