--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,7 @@ description: Uplifting communities through technology
 
 <html>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="{{ page.description }}">
-  <meta name="keywords" content="Rize Digital, technology, community, uplift">
-  <meta name="author" content="Rize Digital">
-  <title>{{page.title}}</title>
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
-</head>
+{% include head.html %}
 
 <body>
   <div class="wrapper">
