adds some learn page content

--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -147,9 +147,11 @@ main {
 		font-size: $font-size-body;
 		font-weight: $font-weight-light;
 		line-height: $line-height-md;
+		max-width: $container-sm;
 
 		@container (min-width: #{$container-lg}) {
 			font-size: $font-size-lg;
+			// max-width: $container-lg;
 		}
 	}
 }
