--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -5,15 +5,19 @@ Heading component
 @param {string} cta_text - Text for the CTA button (optional)
 @param {string} cta_url - URL for the CTA button (optional)
 @param {string} paragraphs - String of paragraphs separated by | (optional)
-@param {boolean} is_list - Whether the paragraphs should be rendered as a list (optional)
+@param {boolean} list - Whether the paragraphs should be rendered as a list (optional)
 @param {string} class - Additional classes for the container (optional)
 @param {boolean} small - Whether to use the small variant (optional)
 {% endcomment %}
 
 <div class="heading-container {% if include.small %}--sm{% endif %}{% if include.class %}{{ include.class }}{% endif %}">
+
+  {% if include.heading %}
   <h2>{{ include.heading }}</h2>
+  {% endif %}
+
   {% if include.subheading %}
-  <p class="subtitle">{{ include.subheading }}</p>
+  <h3>{{ include.subheading }}</h3>
   {% endif %}
 
   {% if include.paragraphs %}
@@ -24,11 +28,10 @@ Heading component
   {% endif %}
 
   {% if include.list %}
-  {% for item in list %}
   <ul class="bento-grid">
     {% for item in list %}
     <li class="bento-section">
-      <p>{{ item | strip }}</p>
+      <span>{{ item | strip }}</span>
     </li>
     {% endfor %}
   </ul>
