Adds better feature styling

--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -2,6 +2,7 @@
 Feature component for bento grid
 @param {string} title - The title of the feature
 @param {string} description - The description text
+@param {string} list - String of list items separated by | (optional)
 @param {string} image - The image path
 @param {string} image_alt - Alt text for the image
 @param {string} button_text - Text for the CTA button
@@ -18,13 +19,30 @@ Feature component for bento grid
       class="bento-image {{ include.image_class }}" />
   </div>
   <div class="bento-section text-container">
+    {% if include.title %}
     <h3>{% if include.icon %}{{ include.icon }} {% endif %}{{ include.title }}</h3>
+    {% endif %}
+
+    {% if include.description %}
     <p class="bento-description">
       {{ include.description }}
     </p>
+    {% endif %}
+
+    {% if include.list %}
+    {% assign list_items = include.list | split: "|" %}
+    <ul class="bento-grid">
+      {% for item in list_items %}
+      <li class="bento-item">
+        <span>{{ item | strip }}</span>
+      </li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+
     {% if include.button_text and include.button_url %}
     <div class="button-container">
-      <a href="{{ include.button_url }}" class="button">{{ include.button_text }}</a>
+      <a href="{{ include.button_url }}" class="button button-alt">{{ include.button_text }}</a>
     </div>
     {% endif %}
   </div>
