adds content to the build page

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -19,7 +19,7 @@
 
       {% if include.cta_url %}
       <div class="button-container">
-        <a href="{{ include.cta_url }}" class="button">{{ include.cta_text }}</a>
+        <a href="{{ include.cta_url }}" class="button button-alt">{{ include.cta_text }}</a>
       </div>
       {% endif %}
     </div>
