adds a bunch of monbile stlye changes and some content editing on CTAs

--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -21,11 +21,11 @@
 			background-color: $color-black;
 			box-shadow: $drop-shadow;
 			border-radius: $border-radius-lg;
-			position: relative;
 			margin-top: -10vh;
 			margin-left: $spacing-sm;
 			margin-right: $spacing-sm;
-			padding: $spacing-xl $spacing-lg;
+			padding: $spacing-xl $spacing-md;
+			position: relative;
 			text-align: center;
 			z-index: 2;
 
