--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -24,19 +24,20 @@ main {
 		font-family: $font-family-display;
 		font-weight: $font-weight-black;
 		font-size: $font-size-xl;
-		line-height: $line-height-sm;
+		line-height: $line-height-xs;
 		letter-spacing: $letter-spacing-loose;
 		text-transform: uppercase;
 
 		@container (min-width: #{$container-lg}) {
 			font-size: $font-size-xxxl;
+			line-height: $line-height-sm;
 		}
 	}
 
 	h3 {
 		font-family: $font-family-display;
 		font-weight: $font-weight-bold;
-		font-size: $font-size-md;
+		font-size: $font-size-sm;
 		line-height: $line-height-sm;
 		letter-spacing: $letter-spacing-tight;
 		text-transform: uppercase;
@@ -58,7 +59,7 @@ main {
 
 	p {
 		font-size: $font-size-body;
-		font-weight: $font-weight-light;
+		font-weight: $font-weight-regular;
 		letter-spacing: $letter-spacing-none;
 
 		@container (min-width: #{$container-lg}) {
@@ -81,8 +82,8 @@ main {
 		flex-flow: column;
 		gap: $spacing-lg;
 		list-style: none;
-		padding: 0;
 		margin: 0;
+		padding: 0;
 
 		@container (min-width: #{$container-lg}) {
 			max-width: $container-lg;
@@ -90,15 +91,19 @@ main {
 
 		li {
 			align-items: center;
-			border: 3px solid;
+			border: 2px solid;
 			border-radius: $border-radius-lg;
 			display: flex;
 			font-size: $font-size-body;
 			font-weight: $font-weight-regular;
 			letter-spacing: $letter-spacing-none;
-			line-height: $line-height-md;
+			line-height: $line-height-sm;
 			margin: 0;
 			padding: $spacing-sm $spacing-lg;
+
+			@container (min-width: #{$container-lg}) {
+				line-height: $line-height-md;
+			}
 		}
 	}
 
@@ -139,7 +144,6 @@ main {
 
 	.subtitle {
 		font-size: $font-size-body;
-		font-weight: $font-weight-light;
 		line-height: $line-height-md;
 		max-width: $container-sm;
 
@@ -161,7 +165,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	gap: $spacing-sm;
-	padding: $spacing-md 0 $spacing-lg;
+	padding: $spacing-md 0 $spacing-sm;
 
 	@container (min-width: #{$container-lg}) {
 		align-items: center;
@@ -172,7 +176,7 @@ main {
 	}
 
 	h2 {
-		padding: $spacing-sm 0;
+		// padding: $spacing-sm 0;
 
 		@container (min-width: #{$container-lg}) {
 			padding: $spacing-md 0;
