--- a/_sass/layout/_bento.scss
+++ b/_sass/layout/_bento.scss
@@ -65,12 +65,11 @@ ul.bento-grid {
 
 	&--feature {
 		box-shadow: $drop-shadow;
-		color: $color-white;
+		// color: $color-white;
 		padding: 0;
 
 		@media (min-width: $breakpoint-lg) {
 			display: grid;
-			// gap: $spacing-md;
 			grid-template-columns: 3fr 2fr;
 		}
 
@@ -108,13 +107,16 @@ ul.bento-grid {
 			}
 
 			h3 {
+				font-size: $font-size-lg;
+				font-weight: $font-weight-black;
+
 				@media (min-width: $breakpoint-lg) {
 					font-size: $font-size-xxl;
 				}
 			}
 
 			ul {
-				gap: $spacing-sm;
+				// gap: $spacing-sm;
 				padding: $spacing-sm 0;
 
 				@media (min-width: $breakpoint-lg) {
@@ -149,8 +151,8 @@ ul.bento-grid {
 		}
 
 		&.bento-image-wrapper {
-			padding: $spacing-md;
-			// border-radius: 0;
+			// padding: $spacing-md;
+			border-radius: 0;
 
 			&.flush {
 				padding: 0;
