--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -8,7 +8,7 @@ header {
 	position: fixed;
 	background-color: $color-white;
 	box-shadow: $drop-shadow-sm;
-	// height: $header-height;
+	height: $header-height;
 	top: 0;
 	left: 0;
 	right: 0;
