--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -186,9 +186,9 @@ main {
 
 	ul {
 		li {
-			background-color: $color-black;
-			border-color: $color-black;
-			color: $color-white;
+			background-color: $color-white;
+			border-color: $color-white;
+			color: $color-black;
 		}
 	}
 }
