Adds list styles and comment cleanup

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
     </div>
     <div class="subfooter">
       <span class="">
-        &copy; {{ site.time | date: '%Y' }} {{ site.title }}
+        &copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.
       </span>
       <p class="text-center">
         <a href="{{ site.url }}/privacy-policy.html">Privacy Policy</a> |
