adds some form positioning and moves land acknowledgement to the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,9 @@
       </div>
     </div>
     <div class="subfooter">
+      <div class=land>
+        <p>We are grateful to live and work on the unceded territories of the <a href="https://www.musqueam.bc.ca/" target="_blank">Musqueam</a>, <a href="https://www.squamish.net/" target="_blank">Squamish</a>, and <a href="https://twnation.ca/" target="_blank">Tsleil-Waututh</a> Nations.</p>
+      </div>
       <span class="">
         &copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.
       </span>
