--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -171,7 +171,7 @@ main {
 	@container (min-width: #{$container-lg}) {
 		align-items: center;
 		align-self: center;
-		max-width: $container-lg;
+		max-width: $container-xl;
 		padding: 0 $spacing-xl;
 		text-align: center;
 	}
