--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -108,6 +108,12 @@ main {
 		}
 	}
 
+	ul[class] {
+		@container (min-width: #{$container-lg}) {
+			padding-bottom: $spacing-xl;
+		}
+	}
+
 	details {
 		summary {
 			display: block;
