--- a/_sass/components/_cta.scss
+++ b/_sass/components/_cta.scss
@@ -24,14 +24,13 @@
 		}
 
 		.heading-container {
-			padding: $spacing-md 0;
+			padding-bottom: $spacing-sm;
 
 			@container (min-width: #{$container-lg}) {
 				padding: $spacing-lg;
 			}
 
 			h2 {
-				// font-size: $font-size-lg;
 				padding: 0;
 				text-align: center;
 
