--- a/_sass/global/_typography.scss
+++ b/_sass/global/_typography.scss
@@ -25,11 +25,12 @@ main {
 		font-weight: $font-weight-black;
 		font-size: $font-size-xl;
 		line-height: $line-height-xs;
-		letter-spacing: $letter-spacing-loose;
+		letter-spacing: $letter-spacing-tight;
 		text-transform: uppercase;
 
 		@container (min-width: #{$container-lg}) {
 			font-size: $font-size-xxxl;
+			letter-spacing: $letter-spacing-loose;
 			line-height: $line-height-sm;
 		}
 	}
